# pymetadata

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .ruff.toml  .zenodo.json  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  TODO.md  fcode.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: main.yml  mypy.yml  ruff.yml
_docs/: README.md  _quarto.yml  development.qmd  index.qmd  installation.qmd  objects.json
_docs/api/: _sidebar.yml  core.annotation.qmd  index.qmd  omex.qmd
_docs/images/favicon/: about.txt
_docs/presentations/HARMONY2026/: README.md  pymetadata.bib  styles.css
_docs/presentations/HARMONY2026/_extensions/grantmcdermott/clean/: _extension.yml
docs/: composite_annotations.md  development.html  index.html  installation.html  robots.txt  search.json  sitemap.xml
docs/api/: core.annotation.html  index.html  installation.html  omex.html
docs/presentations/HARMONY2026/: pymetadata.html
docs/site_libs/bootstrap/: bootstrap-2d307a4ec2a8f1066f9e1ec0473f30bd.min.css  bootstrap-dark-a98197b45ef612f6369c3f77cd8ac320.min.css  bootstrap-icons.css
docs/site_libs/quarto-html/axe/: axe-check.js
docs/site_libs/quarto-search/: autocomplete.umd.js
presentations/HARMONY2026/: pymetadata.qmd
presentations/HARMONY2026/_extensions/grantmcdermott/clean/: clean.scss
presentations/HARMONY2026/pymetadata_files/libs/revealjs/plugin/highlight/: plugin.js
release-notes/: 0.0.10.md  0.0.11.md  0.0.12.md  0.0.13.md  0.0.14.md  0.0.16.md  0.0.17.md  0.0.18.md  0.0.19.md  0.0.2.md  0.0.20.md  0.0.21.md  0.0.22.md  0.0.23.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md  0.0.9.md  0.1.0.md  0.1.1.md  0.2.1.md  0.2.10.md  0.2.11.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  0.2.7.md  0.2.8.md  0.2.9.md  0.3.0.md  0.3.1.md  0.3.10.md  0.3.11.md  0.3.2.md  0.3.3.md  (+23 more)
src/pymetadata/: __init__.py  annotation.py  annotator.py  cache.py  chebi.py  console.py  identifiers_registry.py  log.py  miriam.py  omex.py  omex_v2.py  unichem.py
src/pymetadata/core/: __init__.py  annotation.py  creator.py  synonym.py  xref.py
src/pymetadata/examples/: __init__.py  annotation_example.py  cache_path_example.py  omex.py  omex_example.py  omex_from_url_example.py  sbo_example.py  test.omex
src/pymetadata/examples/biomodels_omex_example/: MODEL2402290004.4_pymetadata.omex  create_omex.py
src/pymetadata/examples/biomodels_omex_example/files/: manifest.xml  metadata.rdf
src/pymetadata/examples/results/: test_from_files.omex  test_from_omex.omex
src/pymetadata/examples/results/testomex/: README.md  manifest.xml
src/pymetadata/examples/testomex/: manifest.xml
src/pymetadata/identifiers/: __init__.py  miriam.py  registry.py
src/pymetadata/metadata/: __init__.py  bto.py  chebi.py  eco.py  kisao.py  kisaos.py  sbo.py  sbo.pyi  unichem.py
src/pymetadata/ontologies/: __init__.py  bioportal.py  kisaos.py  ols.py  ols_search.py  ontology.py
src/pymetadata/pkdb_data/: __init__.py  annotation.py  cache.py  chebi.py  ols.py  registry.py  synonym.py  unichem.py  xref.py
src/pymetadata/resources/: chebi_webservice_wsdl.xml  identifiers.json  identifiers_registry.json
src/pymetadata/resources/ontologies/: README.md  SBO_OBO.obo
src/pymetadata/resources/templates/: ontology_enum.pytemplate
src/pymetadata/resources/testdata/omex/: CombineArchiveShowCase_manifest.xml  test.xml
src/pymetadata/test/: test_chebi.py  test_ols.py  test_omex.py  test_ontology.py  test_registry.py  test_sbo.py  test_unichem.py
src/pymetadata/test/core/: test_annotation.py  test_creator.py
src/pymetadata/test/pkdb_data/: test_annotations.py  test_chebi.py  test_ols.py  test_registry.py  test_unichem.py
tests/: test_chebi.py  test_ols.py  test_ols_search.py  test_omex.py  test_ontology.py  test_registry.py  test_sbo_kisao.py  test_unichem.py
tests/core/: test_annotation.py  test_creator.py
tests/data/omex/: BIOMD0000000001.omex  CompModels_manifest.xml
