[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymetadata"
version = "0.4.4"
description = "pymetadata are python utilities for working with metadata."
readme = "README.rst"
requires-python = ">=3.10"
authors = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
	"modeling",
	"standardization",
	"COMBINE",
	"metadata",
	"archive",
	"annotation",
]
dependencies = [
    "depinfo>=2.2.0",
	"lxml>=5.3",
	"rich>=13.9.4",
	"requests>=2.32.3",
	"zeep>=4.3.1",
	"pronto>=2.5.8",
	"fastobo>=0.12.3",
	"jinja2>=3.1.5",
	"xmltodict>=0.14.2",
	"pydantic>=2.10.4",
]

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.1",
	"ruff>=0.8.6",
	"pre-commit>=4.0.1",
	"mypy>=1.9.0",
]
test = [
    "tox>=4.14.2",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[project_urls]
Homepage = "https://github.com/matthiaskoenig/pymetadata"
Repository = "https://github.com/matthiaskoenig/pymetadata"
Documentation = "https://github.com/matthiaskoenig/pymetadata"
Issues = "https://github.com/matthiaskoenig/pymetadata/issues"
Download = "https://pypi.org/project/pymetadata"


#[options]
#zip_safe = True
#

#packages = find:
#package_dir =
#	= src
#include_package_data = True
#
#[options.package_data]
#pymetadata = py.typed
#
#[aliases]
#test = pytest
#
#[options.packages.find]
#where = src
#

#[bdist_wheel]
#universal = 1

# -----

#[bumpversion]
#current_version = 0.4.4
#commit = True
#tag = True
#parse = (?P<major>\d+)
#	\.(?P<minor>\d+)
#	\.(?P<patch>\d+)
#	(?P<release>[a]*)(?P<num>\d*)
#serialize =
#	{major}.{minor}.{patch}{release}{num}
#	{major}.{minor}.{patch}
#tag_name = {new_version}


#[bumpversion:part:release]
#optional_value = placeholder
#first_value = placeholder
#values =
#	placeholder
#	a
#
#[bumpversion:file:setup.py]
#search = version="{current_version}"
#replace = version="{new_version}"
#
#[bumpversion:file:src/pymetadata/__init__.py]
#search = __version__ = "{current_version}"
#replace = __version__ = "{new_version}"


# --- ruff ---

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py313"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".