[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymetadata"
dynamic = ["version"]
description = "pymetadata are python utilities for working with metadata."
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
	"modeling",
	"standardization",
	"COMBINE",
	"metadata",
	"archive",
	"annotation",
]
dependencies = [
    "depinfo>=2.2.0",
	"lxml>=5.3",
	"rich>=13.9.4",
	"requests>=2.32.3",
	"zeep>=4.3.1",
	"pronto>=2.5.8",
	"fastobo>=0.12.3",
	"jinja2>=3.1.5",
	"xmltodict>=0.14.2",
	"pydantic>=2.10.4",
]

[project.optional-dependencies]
dev = [
    "bump-my-version>=0.29.0",
	"ruff>=0.8.6",
	"pre-commit>=4.0.1",
	"mypy>=1.9.0",
]
test = [
    "tox>=4.14.2",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[project_urls]
Homepage = "https://github.com/matthiaskoenig/pymetadata"
Repository = "https://github.com/matthiaskoenig/pymetadata"
Documentation = "https://github.com/matthiaskoenig/pymetadata"
Issues = "https://github.com/matthiaskoenig/pymetadata/issues"
Download = "https://pypi.org/project/pymetadata"

[tool.hatch.version]
path = "./src/pymetadata/__init__.py"
