[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymetadata"
dynamic = ["version"]
description = "pymetadata are python utilities for working with metadata."
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
	"modeling",
	"standardization",
	"COMBINE",
	"metadata",
	"archive",
	"annotation",
]
dependencies = [
    "depinfo>=2.2.0",
	"lxml>=6.0.2",
	"rich>=14.2.0",
	"requests>=2.32.5",
	"pronto>=2.7.2",
	"fastobo>=0.14.1",
	"jinja2>=3.1.6",
	"xmltodict>=1.0.2",
	"pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "bump-my-version>=1.2.6",
	"ruff>=0.14.11",
	"pre-commit>=4.5.1",
	"mypy>=1.19.1",
    "tox>=4.34.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project_urls]
Homepage = "https://github.com/matthiaskoenig/pymetadata"
Repository = "https://github.com/matthiaskoenig/pymetadata"
Documentation = "https://github.com/matthiaskoenig/pymetadata"
Issues = "https://github.com/matthiaskoenig/pymetadata/issues"
Download = "https://pypi.org/project/pymetadata"

[tool.hatch.version]
path = "./src/pymetadata/__init__.py"
