[bumpversion]
current_version = 0.0.19
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = pymetadata
url = https://github.com/matthiaskoenig/pymetadata
download_url = https://pypi.org/project/pymetadata
project_urls = 
	Source Code = https://github.com/matthiaskoenig/pymetadata
	Documentation = https://github.com/matthiaskoenig/pymetadata
	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = pymetadata are python utilities for working with metadata.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
	modeling
	standardization
	COMBINE
	metadata

[options]
zip_safe = True
python_requires = >=3.7
install_requires = 
	depinfo>=0.1.7
	lxml>=4.6.3
	rich>=10.9.0
	requests>=2.25.1
	zeep>=4.1.0
	uuid>=1.30
	pronto>=2.4.2
	python-libcombine>=0.2.13
	pyomexmeta>=1.2.13
	jinja2>=3.0.1
	xmltodict>=0.12.0
	pydantic>=1.8.2
tests_require = 
	tox>=3.23.1
	pytest>=6.2.2
setup_requires = 
	pytest-runner
packages = find:
package_dir = 
	= src
include_package_data = True

[options.package_data]
pymetadata = py.typed

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development = 
	pip-tools
	black>=21.9b0
	bump2version>=1.0.1
	isort>=5.9.3
	tox>=3.24.3
	flake8>=3.9.2
	flake8-mypy>=17.8.0
	mypy>=0.910
	pytest>=6.2.2
	pytest-cov>=2.8.1

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values = 
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/pymetadata/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
