[bumpversion]
current_version = 0.3.9
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = pymetadata
url = https://github.com/matthiaskoenig/pymetadata
download_url = https://pypi.org/project/pymetadata
project_urls =
	Source Code = https://github.com/matthiaskoenig/pymetadata
	Documentation = https://github.com/matthiaskoenig/pymetadata
	Bug Tracker = https://github.com/matthiaskoenig/pymetadata/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = pymetadata are python utilities for working with metadata.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	modeling
	standardization
	COMBINE
	metadata
	archive
	annotation

[options]
zip_safe = True
python_requires = >=3.8
install_requires =
	depinfo>=1.7
	uuid>=1.30
	lxml>=4.9.1
	rich>=12.6.0
	requests>=2.28.1
	zeep>=4.2.0
	pronto>=2.5.1
	fastobo>=0.12.2
	jinja2>=3.1.2
	xmltodict>=0.13.0
	pydantic>=2.1
tests_require =
	tox>=3.27
	pytest
packages = find:
package_dir =
	= src
include_package_data = True

[options.package_data]
pymetadata = py.typed

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development =
	pip-tools>6.5.1
	black>=22.1.0
	bump2version>=1.0.1
	isort>=5.10
	tox>=3.25
	flake8>=4.0.1
	flake8-mypy>=17.8.0
	mypy>=0.931
	pytest>=7.0.1
	pytest-cov>=3.0.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/pymetadata/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
